<resources>
    <string name="app_name">Pristine Blinds</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="type_zebra_roller">Type (2" Faux/Zebra/Roller)</string>
    <string name="motor">Motor</string>
    <string name="notes">Notes</string>
    <string name="control_l_r">Control L/R</string>
    <string name="faux">Faux</string>
    <string name="zebra">Zebra</string>
    <string name="roller">Roller</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="no">No#</string>
    <string name="pristine_blinds">PRISTINE BLINDS</string>
    <string name="add_button">Add Button</string>
    <string name="submit_button">submit button</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="title_activity_measurement_menu">MeasurementMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="width_remainder">width remainder</string>
    <string name="height_remainder">Height remainder</string>
    <string name="cost_calculations">Cost Calculations</string>
    <string name="total_cost">Total Cost:</string>
    <string name="default_1">Default 1</string>
    <string name="roller_multiplier">Roller Multiplier:</string>
    <string name="zebra_multiplier">Zebra Multiplier:</string>
    <string name="faux_multiplier">Faux Multiplier:</string>
    <string name="default_text">Default</string>
    <string name="select_all">Select All:</string>
    <string name="current_date">Current Date</string>
    <string name="installation_date">Installation Date</string>
    <string name="deposit">Deposit</string>
    <string name="motor_cost">Motor Cost:</string>
</resources>