<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlindInformationGatherer"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/incl"
            layout="@layout/menu_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:id="@+id/scrollableMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incl">

            <LinearLayout
                android:id="@+id/clientMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/NameAndPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/name"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/addressAndEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/address"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Deposit"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/deposit"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/installationDate"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:hint="@string/installation_date"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_all"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/allFaux"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faux" />

                        <RadioButton
                            android:id="@+id/allZebra"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zebra" />

                        <RadioButton
                            android:id="@+id/allRoller"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/roller" />

                        <RadioButton
                            android:id="@+id/allDefault"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/default_text" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faux_multiplier"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/fauxMultiplier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_1"
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zebra_multiplier"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/zebraMultiplier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_1"
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roller_multiplier"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/rollerMultiplier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_1"
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/motor_cost"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/motorCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_1"
                        android:inputType="numberDecimal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/vert_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollableMenu">

            <HorizontalScrollView
                android:id="@+id/Horiz_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/table_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="1px"
                        android:background="@drawable/tablelines">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/no"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/width"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/width_remainder"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/height"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/height_remainder"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/type_zebra_roller"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/motor"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="100dp"
                            android:paddingTop="10dp"
                            android:paddingRight="100dp"
                            android:paddingBottom="10dp"
                            android:text="@string/notes"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/control_l_r"
                            android:textSize="20sp" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/converter_menus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/converter_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fitsSystemWindows="true"
                app:headerLayout="@layout/menu_header"
                app:menu="@menu/measurement_menu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cost_calculations"
                android:textSize="25sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/costCalculations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp" />
            </ScrollView>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
